# MeySQL

./: .gitignore  CMakeLists.txt  Cargo.toml  build.py  build.sh  config.yaml  utils.py
MeySQL/: CMakeLists.txt
MeySQL/headers/include/: MeySQLConfig.h.in  cursor.h  map.h
MeySQL/include/: cellarray.h  celltype.h  database.h  listnode.h  mapnode.h  pointerarray.h  record.h  rowcell.h  rowschema.h  tableheader.h  tablelinklist.h
MeySQL/src/: cell.cpp  cellarray.cpp  cursor.cpp  database.cpp  generator.cpp  generatorlist.cpp  list.cpp  listnode.cpp  map.cpp  mapnode.cpp  pointerarray.cpp  record.cpp  recordlist.cpp  rowcell.cpp  rowschema.cpp  table.cpp  tableheader.cpp  tablelink.cpp  tablelinklist.cpp  tablelist.cpp  tmp.cpp
MeySQLAttempts/1/src/: columntypes.h  database.cpp  row.cpp  rows.h  table.cpp  tablelink.h  utils.h
apis/python/meysql/: MANIFEST  README.md  allcommands.py  command.py  main.py  quick_test.py  request.py  setup.cfg  setup.py  setup.sh  test.py
apis/python/meysql/src/meysql/: __init__.py  allcommands.py  command.py  request.py
cmake/: envcheck.cmake
cmake/import/: boost.cmake  sockpp.cmake
include/: MeySQL.h  MeySQLConfig.h.in  celltype.h  connection.h  connectionrequests.h  cursor.h  row.h  rowcell.h  rowschema.h  server.h  table.h
meysql/: Cargo.toml
meysql-server/: Cargo.toml
meysql-server/src/: main.rs
meysql/src/: config.rs  error.rs  lib.rs
meysql/src/connect/: client.rs  connection.rs  mod.rs  server.rs
meysql/src/connect/interface/: base.rs  mod.rs  system_info.rs  types.rs
meysql/src/database/: cell.rs  database.rs  generator.rs  mod.rs  row.rs  rowschema.rs  table.rs  types.rs
meysql/src/database/filehandlers/: mod.rs
meysql/src/tests/: connect_tests.rs  database_tests.rs  filehandlers_tests.rs  interface_tests.rs  mod.rs
prevAttemps/1/src/: database.h  row.h  rows.cpp  terminal_renderer.cpp  terminal_renderer.h
prevAttemps/2/include/: cell.h  generatorlist.h  list.h  recordlist.h  table.h  tablelink.h  tablelist.h  utils.h
prevAttemps/2/src/: cellarray.cpp  pointerarray.cpp  tablelink.cpp  tablelist.cpp
scripts/utils.py/: requirements.txt
src/: columntypes.cpp  connection.cpp  connectionrequests.cpp  cursor.cpp  cursor.h  database.cpp  database.h  main.cpp  main.rs  row.cpp  row.h  rowcell.cpp  rowschema.cpp  server.cpp  table.cpp  table.h  utils.cpp  utils.h
src/headers/include/: cell.h  generator.h  tablelink.h
src/meysql/: config.rs  error.rs  mod.rs
src/meysql/connect/: connection.rs  mod.rs  server.rs
src/meysql/connect/interface/: base.rs  mod.rs  system_info.rs  types.rs
test/: test1  test1.cpp
test/src/: CMakeLists.txt  main.cpp
tests/python/: meysql_install.sh  meysql_newest_version.py
tests/python/socket-connection/: main.py
tests/socket-connection/: main.py
