[package]
name = "meysql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
log = "0.4.14"
env_logger = "0.9"
project-root = "0.2.2"
positioned-io-preview = "0.3.1"
indexmap = "1.0.2"